Update changesets script, release job

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,10 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@1.6.3/schema.json",
-  "changelog": ["@changesets/cli/changelog", {"repo": "drwpow/cobalt-ui"}],
+  "changelog": ["@changesets/changelog-github", {"repo": "drwpow/cobalt-ui"}],
   "commit": false,
   "linked": [],
   "access": "public",
   "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": ["@example/**", "cobalt-docs"]
+  "updateInternalDependencies": "patch"
 }
