--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,14 +27,14 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "1.0.0",
+    "@cobalt-ui/utils": "^1.0.0",
     "@types/csso": "^5.0.0",
     "better-color-tools": "^0.10.2",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@types/node": "^18.16.0",
-    "esbuild": "^0.17.18",
+    "@types/node": "^20.2.3",
+    "esbuild": "^0.17.19",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.30.1"
   }
