--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
     "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-js packages/plugin-sass",
     "build:utils": "tsc -b packages/utils",
-    "cf:build": "pnpm i --no-frozen-lockfile && npm run build && cd docs && npm run build",
+    "cf:build": "npm run build && cd docs && npm run build",
     "changeset": "changeset",
     "dev": "run-p -s dev:*",
     "dev:core": "cd packages/core && npm run dev",
@@ -41,15 +41,14 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "del-cli": "^4.0.1",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
-    "pnpm": "^8.5.1",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
