--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,13 +29,12 @@
   "dependencies": {
     "@cobalt-ui/utils": "^1.0.0",
     "@types/csso": "^5.0.0",
-    "better-color-tools": "^0.10.2",
-    "svgo": "^3.0.2"
+    "better-color-tools": "^0.12.3"
   },
   "devDependencies": {
-    "@types/node": "^20.2.3",
+    "@types/node": "^20.2.5",
     "esbuild": "^0.17.19",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.31.1"
+    "vitest": "^0.31.4"
   }
 }
