--- a/docs/package.json
+++ b/docs/package.json
@@ -14,10 +14,10 @@
     "dev:serve": "astro dev"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "workspace:^",
-    "@cobalt-ui/core": "workspace:^",
-    "@cobalt-ui/plugin-css": "workspace:^",
-    "@cobalt-ui/plugin-sass": "workspace:^",
+    "@cobalt-ui/cli": "^1.0.0",
+    "@cobalt-ui/core": "^1.0.0",
+    "@cobalt-ui/plugin-css": "^1.2.0",
+    "@cobalt-ui/plugin-sass": "^1.2.0",
     "astro": "^2.5.7",
     "npm-run-all": "^4.1.5",
     "sass": "^1.62.1",
