--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: latest
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 20
       - run: pnpm i
-      - run: pnpm run build
       - uses: changesets/action@v1
         with:
           version: pnpm run version
