--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:plugin-js": "cd packages/plugin-js && npm run test",
     "test:plugin-sass": "cd packages/plugin-sass && npm run test",
     "prepublishOnly": "npm run build",
-    "version": "pnpm run build && changeset version && pnpm i"
+    "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
