--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@cobalt-ui/cli",
   "description": "CLI for using the W3C design token format",
-  "keywords": [
-    "design tokens",
-    "W3C",
-    "JSON"
-  ],
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
+  "keywords": [
+    "design tokens",
+    "cli",
+    "w3c design tokens",
+    "design system",
+    "typescript",
+    "sass",
+    "css",
+    "style tokens",
+    "style system"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/drwpow/cobalt-ui.git",
@@ -31,7 +37,7 @@
     "test:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@cobalt-ui/core": "^1.1.0",
+    "@cobalt-ui/core": "^1.1.1",
     "@cobalt-ui/utils": "^1.1.0",
     "better-color-tools": "^0.12.3",
     "chokidar": "^3.5.3",
