--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,22 @@
 {
   "name": "@cobalt-ui/core",
   "description": "CLI for using the W3C design token format",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
+  "keywords": [
+    "design tokens",
+    "cli",
+    "w3c design tokens",
+    "design system",
+    "typescript",
+    "sass",
+    "css",
+    "style tokens",
+    "style system"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/drwpow/cobalt-ui.git",
