Add global color options

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": ["@changesets/changelog-github", {"repo": "drwpow/cobalt-ui"}],
   "commit": false,
-  "linked": [],
+  "linked": [["@cobalt-ui/core", "@cobalt-ui/cli"]],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch"
