--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
   "scripts": {
     "prebuild": "del-cli \"**/dist\"",
     "build": "run-s -s build:utils build:core build:packages",
-    "build:core": "cd packages/core && npm run build",
+    "build:core": "cd packages/core && pnpm run build",
     "build:examples": "run-p -s build:examples:*",
-    "build:examples:adobe": "cd examples/adobe && npm run build:tokens",
-    "build:examples:apple": "cd examples/apple && npm run build:tokens",
-    "build:examples:github": "cd examples/github && npm run build:tokens",
-    "build:examples:ibm": "cd examples/ibm && npm run build:tokens",
-    "build:examples:salesforce": "cd examples/salesforce && npm run build:tokens",
-    "build:examples:shopify": "cd examples/shopify && npm run build:tokens",
+    "build:examples:adobe": "cd examples/adobe && pnpm run build:tokens",
+    "build:examples:apple": "cd examples/apple && pnpm run build:tokens",
+    "build:examples:github": "cd examples/github && pnpm run build:tokens",
+    "build:examples:ibm": "cd examples/ibm && pnpm run build:tokens",
+    "build:examples:salesforce": "cd examples/salesforce && pnpm run build:tokens",
+    "build:examples:shopify": "cd examples/shopify && pnpm run build:tokens",
     "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-js packages/plugin-sass",
     "build:utils": "tsc -b packages/utils",
-    "cf:build": "npm run build && cd docs && npm run build",
+    "cf:build": "npm run build && cd docs && pnpm run build",
     "changeset": "changeset",
     "dev": "run-p -s dev:*",
-    "dev:core": "cd packages/core && npm run dev",
-    "dev:cli": "cd packages/cli && npm run dev",
-    "dev:utils": "cd packages/utils && npm run dev",
-    "dev:plugin-css": "cd packages/plugin-css && npm run dev",
-    "dev:plugin-js": "cd packages/plugin-js && npm run dev",
-    "dev:plugin-sass": "cd packages/plugin-sass && npm run dev",
+    "dev:core": "cd packages/core && pnpm run dev",
+    "dev:cli": "cd packages/cli && pnpm run dev",
+    "dev:utils": "cd packages/utils && pnpm run dev",
+    "dev:plugin-css": "cd packages/plugin-css && pnpm run dev",
+    "dev:plugin-js": "cd packages/plugin-js && pnpm run dev",
+    "dev:plugin-sass": "cd packages/plugin-sass && pnpm run dev",
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
-    "test:cli": "cd packages/cli && npm run test",
-    "test:core": "cd packages/core && npm run test",
-    "test:plugin-css": "cd packages/plugin-css && npm run test",
-    "test:plugin-js": "cd packages/plugin-js && npm run test",
-    "test:plugin-sass": "cd packages/plugin-sass && npm run test",
-    "prepublishOnly": "npm run build",
+    "test:cli": "cd packages/cli && pnpm run test",
+    "test:core": "cd packages/core && pnpm run test",
+    "test:plugin-css": "cd packages/plugin-css && pnpm run test",
+    "test:plugin-js": "cd packages/plugin-js && pnpm run test",
+    "test:plugin-sass": "cd packages/plugin-sass && pnpm run test",
+    "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
