--- a/docs/package.json
+++ b/docs/package.json
@@ -14,10 +14,10 @@
     "dev:serve": "astro dev"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.1.3",
-    "@cobalt-ui/core": "^1.1.3",
-    "@cobalt-ui/plugin-css": "^1.2.2",
-    "@cobalt-ui/plugin-sass": "^1.2.2",
+    "@cobalt-ui/cli": "workspace:*",
+    "@cobalt-ui/core": "workspace:*",
+    "@cobalt-ui/plugin-css": "workspace:*",
+    "@cobalt-ui/plugin-sass": "workspace:*",
     "astro": "^2.8.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.63.6",
