--- a/examples/github/package.json
+++ b/examples/github/package.json
@@ -8,10 +8,10 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.1.0",
-    "@cobalt-ui/plugin-css": "^1.2.1",
-    "@cobalt-ui/plugin-js": "^1.2.1",
-    "@cobalt-ui/plugin-sass": "^1.2.1",
+    "@cobalt-ui/cli": "workspace:*",
+    "@cobalt-ui/plugin-css": "workspace:*",
+    "@cobalt-ui/plugin-js": "workspace:*",
+    "@cobalt-ui/plugin-sass": "workspace:*",
     "@primer/octicons": "^16.3.1",
     "@primer/primitives": "^7.9.0"
   }
