--- a/examples/ibm/package.json
+++ b/examples/ibm/package.json
@@ -11,9 +11,9 @@
     "@carbon/colors": "^11.6.0",
     "@carbon/icons": "^11.10.0",
     "@carbon/type": "^11.10.0",
-    "@cobalt-ui/cli": "^1.1.0",
-    "@cobalt-ui/plugin-css": "^1.2.1",
-    "@cobalt-ui/plugin-js": "^1.2.1",
-    "@cobalt-ui/plugin-sass": "^1.2.1"
+    "@cobalt-ui/cli": "workspace:*",
+    "@cobalt-ui/plugin-css": "workspace:*",
+    "@cobalt-ui/plugin-js": "workspace:*",
+    "@cobalt-ui/plugin-sass": "workspace:*"
   }
 }
