--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -8,10 +8,10 @@
     "update": "node scripts/update"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.1.0",
-    "@cobalt-ui/plugin-css": "^1.2.1",
-    "@cobalt-ui/plugin-js": "^1.2.1",
-    "@cobalt-ui/plugin-sass": "^1.2.1",
+    "@cobalt-ui/cli": "workspace:*",
+    "@cobalt-ui/plugin-css": "workspace:*",
+    "@cobalt-ui/plugin-js": "workspace:*",
+    "@cobalt-ui/plugin-sass": "workspace:*",
     "@salesforce-ux/design-system": "^2.16.2",
     "better-color-tools": "^0.12.3",
     "postcss": "^8.4.16"
