Require Node v18 or greater

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,9 @@
     "style tokens",
     "style system"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/drwpow/cobalt-ui.git",
