--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,13 @@ jobs:
   changelog:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: latest
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
+          version: 8
       - run: pnpm i
       - run: pnpm run build
       - uses: changesets/action@v1
