--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,6 +17,9 @@
     "style tokens",
     "style system"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/drwpow/cobalt-ui.git",
@@ -42,12 +45,14 @@
     "better-color-tools": "^0.12.3",
     "chokidar": "^3.5.3",
     "dotenv": "^16.3.1",
+    "js-yaml": "^4.1.0",
     "piscina": "^3.2.0",
     "svgo": "^3.0.2",
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "execa": "^7.1.1",
     "figma-api": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.33.0"
