IDK maybe this will help it

--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -28,7 +28,7 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "*"
+    "@cobalt-ui/cli": "^1.2.0"
   },
   "dependencies": {
     "@cobalt-ui/utils": "^1.1.1"
