--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -27,7 +27,7 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "*"
+    "@cobalt-ui/cli": "^1.2.0"
   },
   "dependencies": {
     "@cobalt-ui/plugin-css": "^1.2.3",
