--- a/docs/package.json
+++ b/docs/package.json
@@ -13,15 +13,19 @@
     "dev:tokens": "co build -w",
     "dev:serve": "astro dev"
   },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "nanoid": "^4.0.2"
+  },
   "devDependencies": {
     "@cobalt-ui/cli": "workspace:*",
     "@cobalt-ui/core": "workspace:*",
     "@cobalt-ui/plugin-css": "workspace:*",
     "@cobalt-ui/plugin-sass": "workspace:*",
-    "astro": "^2.8.2",
+    "astro": "^2.9.3",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.63.6",
+    "sass": "^1.64.1",
     "shiki": "^0.14.3",
-    "vite": "^4.4.4"
+    "vite": "^4.4.7"
   }
 }
