--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -13,7 +13,7 @@
     "@cobalt-ui/plugin-js": "workspace:*",
     "@cobalt-ui/plugin-sass": "workspace:*",
     "@salesforce-ux/design-system": "^2.21.3",
-    "better-color-tools": "^0.12.3",
+    "culori": "^3.2.0",
     "postcss": "^8.4.26"
   }
 }
