--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,8 +42,9 @@
   "dependencies": {
     "@cobalt-ui/core": "^1.3.0",
     "@cobalt-ui/utils": "^1.1.1",
-    "better-color-tools": "^0.12.3",
+    "@types/culori": "^2.0.0",
     "chokidar": "^3.5.3",
+    "culori": "^3.2.0",
     "dotenv": "^16.3.1",
     "js-yaml": "^4.1.0",
     "piscina": "^3.2.0",
@@ -51,8 +52,8 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "execa": "^7.1.1",
+    "@types/node": "^20.4.5",
+    "execa": "^7.2.0",
     "figma-api": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.33.0"
