--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,11 +38,12 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "^1.1.1",
-    "better-color-tools": "^0.12.3"
+    "@types/culori": "^2.0.0",
+    "culori": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
-    "esbuild": "^0.18.12",
+    "@types/node": "^20.4.5",
+    "esbuild": "^0.18.17",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.33.0"
   }
