--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -31,15 +31,16 @@
   },
   "dependencies": {
     "@cobalt-ui/utils": "^1.1.1",
-    "better-color-tools": "^0.12.3",
+    "@types/culori": "^2.0.0",
+    "@types/mime": "^3.0.1",
+    "culori": "^3.2.0",
     "mime": "^3.0.0",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^1.3.0",
     "@cobalt-ui/core": "^1.3.0",
-    "@types/mime": "^2.0.3",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.5",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.33.0"
   }
