Package license into comment

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "build:examples:ibm": "cd examples/ibm && pnpm run build:tokens",
     "build:examples:salesforce": "cd examples/salesforce && pnpm run build:tokens",
     "build:examples:shopify": "cd examples/shopify && pnpm run build:tokens",
-    "build:packages": "tsc -b packages/cli packages/plugin-css packages/plugin-js packages/plugin-sass",
-    "build:utils": "tsc -b packages/utils",
+    "build:utils": "cd packages/utils && pnpm run build",
+    "build:packages": "run-p -s build-packages:*",
+    "build-packages:cli": "cd packages/cli && pnpm run build",
+    "build-packages:plugin-css": "cd packages/plugin-css && pnpm run build && cd ../plugin-sass && pnpm run build",
+    "build-packages:plugin-js": "cd packages/plugin-js && pnpm run build",
     "cf:build": "pnpm run build && cd docs && pnpm run build",
     "changeset": "changeset",
     "dev": "run-p -s dev:*",
@@ -45,7 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "del-cli": "^4.0.1",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
