--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -20,7 +20,10 @@
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "run-s -s build:*",
+    "build:clean": "del dist",
+    "build:ts": "tsc",
+    "build:license": "../../scripts/inject-license.js @cobalt-ui/plugin-js dist/index.js",
     "dev": "tsc -w",
     "pretest": "co build -c ./test/types.tokens.mjs",
     "test": "run-p -s test:*",
