--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6"
