--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,9 +11,11 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "test": "vitest run"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0"
+    "@types/node": "^20.5.0",
+    "vitest": "^0.34.2"
   }
 }
