--- a/package.json
+++ b/package.json
@@ -39,21 +39,22 @@
     "test:plugin-css": "cd packages/plugin-css && pnpm run test",
     "test:plugin-js": "cd packages/plugin-js && pnpm run test",
     "test:plugin-sass": "cd packages/plugin-sass && pnpm run test",
+    "test:utils": "cd packages/utils && pnpm run test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "del-cli": "^4.0.1",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   }
 }
