--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -23,7 +23,7 @@
     "build": "run-s -s build:*",
     "build:clean": "del dist",
     "build:ts": "tsc",
-    "build:license": "../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
+    "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
     "dev": "tsc -w",
     "test": "run-p -s test:*",
     "test:js": "vitest run",
