--- a/docs/src/docs-manifest.json
+++ b/docs/src/docs-manifest.json
@@ -4,7 +4,7 @@
     {"title": "Tokens",          "pathname": "/docs/tokens"},
     {"title": "Color",           "pathname": "/docs/tokens/#color"},
     {"title": "Dimension",       "pathname": "/docs/tokens/#dimension"},
-    {"title": "Font Family",     "pathname": "/docs/tokens/#font"},
+    {"title": "Font Family",     "pathname": "/docs/tokens/#font-family"},
     {"title": "Font Weight",     "pathname": "/docs/tokens/#font-weight"},
     {"title": "Duration",        "pathname": "/docs/tokens/#duration"},
     {"title": "Cubic Bézier",    "pathname": "/docs/tokens/#cubic-bezier"},
@@ -21,10 +21,11 @@
     {"title": "Aliasing",        "pathname": "/docs/tokens/#aliasing"},
     {"title": "Modes",           "pathname": "/docs/tokens/#modes"},
     {"title": "Guides",          "pathname": "/docs/guides"},
+    {"title": "What are Design Tokens?",  "pathname": "/docs/guides/design-tokens"},
     {"title": "Best Practices",  "pathname": "/docs/guides/best-practices"},
     {"title": "Modes",           "pathname": "/docs/guides/modes"},
     {"title": "Tokens Studio",   "pathname": "/docs/guides/tokens-studio"},
-    {"title": "Create Plugins",  "pathname": "/docs/guides/plugins"},
+    {"title": "Custom Plugins",  "pathname": "/docs/guides/plugins"},
     {"title": "Plugins",         "pathname": "/docs/plugins"},
     {"title": "CSS",             "pathname": "/docs/plugins/css"},
     {"title": "Sass",            "pathname": "/docs/plugins/sass"},
