--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -30,10 +30,10 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "^1.4.0"
+    "@cobalt-ui/cli": "^1.x"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^1.1.1",
+    "@cobalt-ui/utils": "^1.2.1",
     "@types/culori": "^2.0.0",
     "@types/mime": "^3.0.1",
     "culori": "^3.2.0",
@@ -41,10 +41,10 @@
     "svgo": "^3.0.2"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.4.1",
-    "@cobalt-ui/core": "^1.4.0",
-    "@types/node": "^20.5.0",
+    "@cobalt-ui/cli": "^1.4.2",
+    "@cobalt-ui/core": "^1.4.3",
+    "@types/node": "^20.5.7",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   }
 }
