--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -31,16 +31,16 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "^1.4.0"
+    "@cobalt-ui/cli": "1.x"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^1.2.0"
+    "@cobalt-ui/utils": "^1.2.1"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.4.1",
-    "@cobalt-ui/core": "^1.4.0",
+    "@cobalt-ui/cli": "^1.4.2",
+    "@cobalt-ui/core": "^1.4.3",
     "fast-glob": "^3.3.1",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.34.2"
+    "vitest": "^0.34.3"
   }
 }
