--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -37,12 +37,14 @@
     "@types/culori": "^2.0.0",
     "@types/mime": "^3.0.1",
     "culori": "^3.2.0",
+    "micromatch": "^4.0.5",
     "mime": "^3.0.0",
     "svgo": "^3.0.2"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^1.4.2",
     "@cobalt-ui/core": "^1.4.3",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "^20.5.7",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.34.3"
