--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -30,10 +30,10 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "^1.x"
+    "@cobalt-ui/cli": "^1.x",
+    "@cobalt-ui/plugin-css": "^1.x"
   },
   "dependencies": {
-    "@cobalt-ui/plugin-css": "^1.3.4",
     "@cobalt-ui/utils": "^1.2.1",
     "@types/mime": "^3.0.1",
     "mime": "^3.0.0",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@cobalt-ui/cli": "^1.4.2",
     "@cobalt-ui/core": "^1.4.3",
+    "@cobalt-ui/plugin-css": "^1.3.4",
     "@types/node": "^20.5.7",
     "npm-run-all": "^4.1.5",
     "vitest": "^0.34.3"
