--- a/docs/src/docs-manifest.json
+++ b/docs/src/docs-manifest.json
@@ -1,38 +1,39 @@
 {
   "pages": [
-    {"title": "Getting Started", "pathname": "/docs/getting-started"},
-    {"title": "Tokens",          "pathname": "/docs/tokens"},
-    {"title": "Color",           "pathname": "/docs/tokens/#color"},
-    {"title": "Dimension",       "pathname": "/docs/tokens/#dimension"},
-    {"title": "Font Family",     "pathname": "/docs/tokens/#font-family"},
-    {"title": "Font Weight",     "pathname": "/docs/tokens/#font-weight"},
-    {"title": "Duration",        "pathname": "/docs/tokens/#duration"},
-    {"title": "Cubic Bézier",    "pathname": "/docs/tokens/#cubic-bezier"},
-    {"title": "Number",          "pathname": "/docs/tokens/#number"},
-    {"title": "Link",            "pathname": "/docs/tokens/#link"},
-    {"title": "Stroke style",    "pathname": "/docs/tokens/#stroke-style"},
-    {"title": "Border",          "pathname": "/docs/tokens/#border"},
-    {"title": "Transition",      "pathname": "/docs/tokens/#transition"},
-    {"title": "Shadow",          "pathname": "/docs/tokens/#shadow"},
-    {"title": "Gradient",        "pathname": "/docs/tokens/#gradient"},
-    {"title": "Typography",      "pathname": "/docs/tokens/#typography"},
-    {"title": "Groups",          "pathname": "/docs/tokens/#groups"},
-    {"title": "Custom",          "pathname": "/docs/tokens/#custom"},
-    {"title": "Aliasing",        "pathname": "/docs/tokens/#aliasing"},
-    {"title": "Modes",           "pathname": "/docs/tokens/#modes"},
-    {"title": "Guides",          "pathname": "/docs/guides"},
+    {"title": "Getting Started",          "pathname": "/docs/getting-started"},
+    {"title": "Tokens",                   "pathname": "/docs/tokens"},
+    {"title": "Color",                    "pathname": "/docs/tokens/#color"},
+    {"title": "Dimension",                "pathname": "/docs/tokens/#dimension"},
+    {"title": "Font Family",              "pathname": "/docs/tokens/#font-family"},
+    {"title": "Font Weight",              "pathname": "/docs/tokens/#font-weight"},
+    {"title": "Duration",                 "pathname": "/docs/tokens/#duration"},
+    {"title": "Cubic Bézier",             "pathname": "/docs/tokens/#cubic-bezier"},
+    {"title": "Number",                   "pathname": "/docs/tokens/#number"},
+    {"title": "Link",                     "pathname": "/docs/tokens/#link"},
+    {"title": "Stroke style",             "pathname": "/docs/tokens/#stroke-style"},
+    {"title": "Border",                   "pathname": "/docs/tokens/#border"},
+    {"title": "Transition",               "pathname": "/docs/tokens/#transition"},
+    {"title": "Shadow",                   "pathname": "/docs/tokens/#shadow"},
+    {"title": "Gradient",                 "pathname": "/docs/tokens/#gradient"},
+    {"title": "Typography",               "pathname": "/docs/tokens/#typography"},
+    {"title": "Groups",                   "pathname": "/docs/tokens/#groups"},
+    {"title": "Custom",                   "pathname": "/docs/tokens/#custom"},
+    {"title": "Aliasing",                 "pathname": "/docs/tokens/#aliasing"},
+    {"title": "Modes",                    "pathname": "/docs/tokens/#modes"},
+    {"title": "Guides",                   "pathname": "/docs/guides"},
     {"title": "What are Design Tokens?",  "pathname": "/docs/guides/design-tokens"},
-    {"title": "Best Practices",  "pathname": "/docs/guides/best-practices"},
-    {"title": "Modes",           "pathname": "/docs/guides/modes"},
-    {"title": "Tokens Studio",   "pathname": "/docs/guides/tokens-studio"},
-    {"title": "Custom Plugins",  "pathname": "/docs/guides/plugins"},
-    {"title": "Plugins",         "pathname": "/docs/plugins"},
-    {"title": "CSS",             "pathname": "/docs/plugins/css"},
-    {"title": "Sass",            "pathname": "/docs/plugins/sass"},
-    {"title": "JS/JSON/TS",      "pathname": "/docs/plugins/js"},
-    {"title": "Reference",       "pathname": "/docs/reference"},
-    {"title": "CLI",             "pathname": "/docs/reference/cli"},
-    {"title": "Config API",      "pathname": "/docs/reference/config"},
-    {"title": "About",           "pathname": "/docs/reference/about"}
+    {"title": "Best Practices",           "pathname": "/docs/guides/best-practices"},
+    {"title": "Modes",                    "pathname": "/docs/guides/modes"},
+    {"title": "Style Dictionary",         "pathname": "/docs/guides/style-dictionary"},
+    {"title": "Tokens Studio",            "pathname": "/docs/guides/tokens-studio"},
+    {"title": "Custom Plugins",           "pathname": "/docs/guides/plugins"},
+    {"title": "Plugins",                  "pathname": "/docs/plugins"},
+    {"title": "CSS",                      "pathname": "/docs/plugins/css"},
+    {"title": "Sass",                     "pathname": "/docs/plugins/sass"},
+    {"title": "JS/JSON/TS",               "pathname": "/docs/plugins/js"},
+    {"title": "Reference",                "pathname": "/docs/reference"},
+    {"title": "CLI",                      "pathname": "/docs/reference/cli"},
+    {"title": "Config API",               "pathname": "/docs/reference/config"},
+    {"title": "About",                    "pathname": "/docs/reference/about"}
   ]
 }
