--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,7 +37,7 @@
     "build:clean": "del dist",
     "build:ts": "tsc",
     "dev": "tsc -w",
-    "test": "run-p test:js test:ts",
+    "test": "run-p -s test:*",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
