--- a/docs/src/docs-manifest.json
+++ b/docs/src/docs-manifest.json
@@ -20,17 +20,17 @@
     {"title": "Custom",                   "pathname": "/docs/tokens/#custom"},
     {"title": "Aliasing",                 "pathname": "/docs/tokens/#aliasing"},
     {"title": "Modes",                    "pathname": "/docs/tokens/#modes"},
+    {"title": "Integrations",             "pathname": "/docs/integrations"},
+    {"title": "CSS",                      "pathname": "/docs/integrations/css"},
+    {"title": "Sass",                     "pathname": "/docs/integrations/sass"},
+    {"title": "JSON/JS/TS",               "pathname": "/docs/integrations/js"},
+    {"title": "Style Dictionary",         "pathname": "/docs/integrations/style-dictionary"},
+    {"title": "Tokens Studio",            "pathname": "/docs/integrations/tokens-studio"},
+    {"title": "Custom Plugins",           "pathname": "/docs/integrations/custom-plugins"},
     {"title": "Guides",                   "pathname": "/docs/guides"},
     {"title": "What are Design Tokens?",  "pathname": "/docs/guides/design-tokens"},
     {"title": "Best Practices",           "pathname": "/docs/guides/best-practices"},
     {"title": "Modes",                    "pathname": "/docs/guides/modes"},
-    {"title": "Style Dictionary",         "pathname": "/docs/guides/style-dictionary"},
-    {"title": "Tokens Studio",            "pathname": "/docs/guides/tokens-studio"},
-    {"title": "Custom Plugins",           "pathname": "/docs/guides/plugins"},
-    {"title": "Plugins",                  "pathname": "/docs/plugins"},
-    {"title": "CSS",                      "pathname": "/docs/plugins/css"},
-    {"title": "Sass",                     "pathname": "/docs/plugins/sass"},
-    {"title": "JS/JSON/TS",               "pathname": "/docs/plugins/js"},
     {"title": "Reference",                "pathname": "/docs/reference"},
     {"title": "CLI",                      "pathname": "/docs/reference/cli"},
     {"title": "Config API",               "pathname": "/docs/reference/config"},
