--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,8 @@
   },
   "keywords": [
     "design tokens",
+    "dtfm",
+    "dtcg",
     "cli",
     "w3c design tokens",
     "design system",
@@ -54,10 +56,10 @@
   },
   "devDependencies": {
     "@types/culori": "^2.0.0",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.8.7",
     "execa": "^7.2.0",
     "figma-api": "^1.11.0",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.6"
   }
 }
