--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -8,7 +8,11 @@
   },
   "keywords": [
     "cobalt",
-    "design tokens"
+    "design tokens",
+    "design system",
+    "dtfm",
+    "w3c",
+    "css"
   ],
   "repository": {
     "type": "git",
@@ -43,8 +47,8 @@
   "devDependencies": {
     "@cobalt-ui/cli": "^1.6.0",
     "@cobalt-ui/core": "^1.6.0",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.8.7",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.6"
   }
 }
