--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -8,7 +8,11 @@
   },
   "keywords": [
     "cobalt",
-    "design tokens"
+    "design tokens",
+    "design system",
+    "dtfm",
+    "dtcg",
+    "w3c"
   ],
   "repository": {
     "type": "git",
@@ -41,6 +45,6 @@
     "@cobalt-ui/core": "^1.6.0",
     "fast-glob": "^3.3.1",
     "npm-run-all": "^4.1.5",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.6"
   }
 }
