--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@cobalt-ui/plugin-sass",
-  "description": "Generate scss/sass from your design tokens schema (requires @cobalt-ui/cli)",
-  "version": "1.3.0",
+  "name": "@cobalt-ui/plugin-tailwind",
+  "version": "0.0.1",
   "author": {
     "name": "Drew Powers",
     "email": "drew@pow.rs"
@@ -13,15 +12,14 @@
     "dtfm",
     "dtcg",
     "w3c",
-    "css",
-    "sass"
+    "tailwind",
+    "css"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/drwpow/cobalt-ui.git",
-    "directory": "packages/plugin-sass"
+    "directory": "packages/plugin-tailwind"
   },
-  "homepage": "https://cobalt-ui.pages.dev",
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
@@ -29,28 +27,27 @@
     "build": "run-s -s build:*",
     "build:clean": "del dist",
     "build:ts": "tsc",
-    "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
+    "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-tailwind dist/index.js",
     "dev": "tsc -w",
     "test": "run-p -s test:*",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@cobalt-ui/cli": "^1.x",
-    "@cobalt-ui/plugin-css": "^1.x"
+    "@cobalt-ui/cli": "*",
+    "tailwindcss": "*"
   },
   "dependencies": {
-    "@cobalt-ui/utils": "^1.2.2",
-    "@types/mime": "^3.0.1",
-    "mime": "^3.0.0",
-    "svgo": "^3.0.2"
+    "@cobalt-ui/plugin-css": "^1.5.0",
+    "@cobalt-ui/utils": "^1.2.2"
   },
   "devDependencies": {
     "@cobalt-ui/cli": "^1.6.0",
     "@cobalt-ui/core": "^1.6.0",
-    "@cobalt-ui/plugin-css": "^1.5.0",
     "@types/node": "^20.8.7",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.3.3",
     "vitest": "^0.34.6"
   }
 }
