--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/drwpow/cobalt-ui.git",
+    "url": "git+https://github.com/drwpow/cobalt-ui.git",
     "directory": "packages/plugin-sass"
   },
   "homepage": "https://cobalt-ui.pages.dev",
