--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -9,9 +9,10 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens format module",
     "design system",
     "dtfm",
-    "w3c",
+    "w3c design tokens",
     "css"
   ],
   "repository": {
