--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -9,10 +9,11 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens format module",
     "design system",
     "dtfm",
     "dtcg",
-    "w3c"
+    "w3c design tokens"
   ],
   "repository": {
     "type": "git",
