--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -8,6 +8,7 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens format module",
     "design system",
     "dtfm",
     "dtcg",
