Add Tailwind docs on CSS variables

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:utils": "cd packages/utils && pnpm run build",
     "build:packages": "run-p -s build-packages:*",
     "build-packages:cli": "cd packages/cli && pnpm run build",
-    "build-packages:plugin-css": "cd packages/plugin-css && pnpm run build && cd ../plugin-sass && pnpm run build",
+    "build-packages:plugin-css": "cd packages/plugin-css && pnpm run build && cd ../plugin-sass && pnpm run build && cd ../plugin-tailwind && pnpm run build",
     "build-packages:plugin-js": "cd packages/plugin-js && pnpm run build",
     "cf:build": "pnpm run build && cd docs && pnpm run build",
     "changeset": "changeset",
@@ -32,6 +32,7 @@
     "dev:plugin-css": "cd packages/plugin-css && pnpm run dev",
     "dev:plugin-js": "cd packages/plugin-js && pnpm run dev",
     "dev:plugin-sass": "cd packages/plugin-sass && pnpm run dev",
+    "dev:plugin-tw": "cd packages/plugin-tailwind && pnpm run dev",
     "lint": "eslint \"packages/**/*.{ts,js,cjs,mjs}\"",
     "test": "run-p test:*",
     "test:cli": "cd packages/cli && pnpm run test",
@@ -39,6 +40,7 @@
     "test:plugin-css": "cd packages/plugin-css && pnpm run test",
     "test:plugin-js": "cd packages/plugin-js && pnpm run test",
     "test:plugin-sass": "cd packages/plugin-sass && pnpm run test",
+    "test:plugin-tw": "cd packages/plugin-tailwind && pnpm run test",
     "test:utils": "cd packages/utils && pnpm run test",
     "prepublishOnly": "pnpm run build",
     "version": "pnpm run build && changeset version && pnpm i --no-frozen-lockfile"
