--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -9,9 +9,9 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens community group",
     "design tokens format module",
     "design system",
-    "dtfm",
     "dtcg",
     "w3c design tokens"
   ],
