--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -9,8 +9,8 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens community group",
     "design system",
-    "dtfm",
     "dtcg",
     "w3c",
     "css",
