--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -8,9 +8,9 @@
   "keywords": [
     "cobalt",
     "design tokens",
+    "design tokens community group",
     "design tokens format module",
     "design system",
-    "dtfm",
     "dtcg",
     "w3c",
     "tailwind",
