--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -25,12 +25,12 @@
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "run-s -s build:*",
+    "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
     "build:ts": "tsc",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-tailwind dist/index.js",
     "dev": "tsc -w",
-    "test": "run-p -s test:*",
+    "test": "pnpm run --parallel \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
@@ -47,8 +47,7 @@
     "@cobalt-ui/core": "^1.6.1",
     "@types/node": "^20.9.3",
     "js-yaml": "^4.1.0",
-    "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.3.5",
-    "vitest": "^1.1.0"
+    "vitest": "^1.2.0"
   }
 }
