--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -31,7 +31,7 @@
     "build:ts": "tsc",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
     "dev": "tsc -w",
-    "test": "pnpm run --parallel \"test:.*\"",
+    "test": "pnpm run \"test:.*\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
