--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -30,7 +30,7 @@
     "build:ts": "tsc",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-js dist/index.js",
     "dev": "tsc -w",
-    "test": "co build -c ./test/types.tokens.mjs && pnpm run --parallel \"/^test:.*/\"",
+    "test": "co build -c ./test/types.tokens.mjs && pnpm run \"/^test:.*/\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
