--- a/docs/package.json
+++ b/docs/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@cobalt-ui/docs",
+  "name": "cobalt-ui-docs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vitepress dev",
-    "build": "del .vitepress/dist && vitepress build && cp _redirects .vitepress/dist",
+    "build": "del \"**/dist\" && vitepress build && cp _redirects .vitepress/dist",
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "vue": "^3.3.13"
+    "vue": "^3.4.14"
   },
   "devDependencies": {
-    "vite": "^5.0.10",
-    "vitepress": "1.0.0-rc.32"
+    "vite": "^5.0.11",
+    "vitepress": "1.0.0-rc.39"
   }
 }
