--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -26,12 +26,12 @@
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "run-s -s build:*",
+    "build": "pnpm run build:clean && pnpm run build:ts && pnpm run build:license",
     "build:clean": "del dist",
     "build:ts": "tsc",
     "build:license": "node ../../scripts/inject-license.js @cobalt-ui/plugin-sass dist/index.js",
     "dev": "tsc -w",
-    "test": "run-p -s test:*",
+    "test": "pnpm run \"test:.*\"",
     "test:js": "vitest run",
     "test:ts": "tsc --noEmit"
   },
@@ -50,7 +50,6 @@
     "@cobalt-ui/core": "^1.6.1",
     "@cobalt-ui/plugin-css": "^1.7.0",
     "@types/node": "^20.9.3",
-    "npm-run-all": "^4.1.5",
-    "vitest": "^1.1.0"
+    "vitest": "^1.2.0"
   }
 }
