--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,20 +6,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "keywords": [
-    "design tokens",
-    "design tokens community group",
-    "design tokens format module",
-    "dtcg",
-    "cli",
-    "w3c design tokens",
-    "design system",
-    "typescript",
-    "sass",
-    "css",
-    "style tokens",
-    "style system"
-  ],
+  "keywords": ["design tokens", "design tokens community group", "design tokens format module", "dtcg", "cli", "w3c design tokens", "design system", "typescript", "sass", "css", "style tokens", "style system"],
   "engines": {
     "node": ">=18.0.0"
   },
@@ -57,8 +44,8 @@
   },
   "devDependencies": {
     "@types/culori": "^2.0.4",
-    "@types/node": "^20.11.6",
+    "@types/node": "^20.11.16",
     "execa": "^7.2.0",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   }
 }
