--- a/packages/plugin-css/package.json
+++ b/packages/plugin-css/package.json
@@ -6,16 +6,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "keywords": [
-    "cobalt",
-    "design tokens",
-    "design tokens community group",
-    "design tokens format module",
-    "design system",
-    "dtcg",
-    "w3c design tokens",
-    "css"
-  ],
+  "keywords": ["cobalt", "design tokens", "design tokens community group", "design tokens format module", "design system", "dtcg", "w3c design tokens", "css"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/drwpow/cobalt-ui.git",
@@ -47,9 +38,9 @@
     "svgo": "^3.2.0"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.6.2",
-    "@cobalt-ui/core": "^1.6.1",
-    "@types/node": "^20.11.6",
-    "vitest": "^1.2.1"
+    "@cobalt-ui/cli": "workspace:^",
+    "@cobalt-ui/core": "workspace:^",
+    "@types/node": "^20.11.16",
+    "vitest": "^1.2.2"
   }
 }
