--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -6,15 +6,7 @@
     "name": "Drew Powers",
     "email": "drew@pow.rs"
   },
-  "keywords": [
-    "cobalt",
-    "design tokens",
-    "design tokens community group",
-    "design tokens format module",
-    "design system",
-    "dtcg",
-    "w3c design tokens"
-  ],
+  "keywords": ["cobalt", "design tokens", "design tokens community group", "design tokens format module", "design system", "dtcg", "w3c design tokens"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/drwpow/cobalt-ui.git",
@@ -41,9 +33,9 @@
     "@cobalt-ui/utils": "^1.2.2"
   },
   "devDependencies": {
-    "@cobalt-ui/cli": "^1.6.2",
-    "@cobalt-ui/core": "^1.6.1",
+    "@cobalt-ui/cli": "workspace:^",
+    "@cobalt-ui/core": "workspace:^",
     "fast-glob": "^3.3.2",
-    "vitest": "^1.2.1"
+    "vitest": "^1.2.2"
   }
 }
