Fix Windows tests?

--- a/packages/cli/.gitignore
+++ b/packages/cli/.gitignore
@@ -1,3 +1,5 @@
 **/tokens/**/*
 test/fixtures/bundle-default/given
+test/fixtures/figma-error/given.json
+test/fixtures/figma-success/given.jso
 test/fixtures/style-dictionary/given.json
