--- a/packages/plugin-tailwind/tsconfig.json
+++ b/packages/plugin-tailwind/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "noEmit": false,
     "outDir": "./dist/"
   },
   "include": ["src"]
